[package]
name = "rust_udp_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
mac_address = "1.1.3"
uuid = { version = "0.8.2", features = ["v4"] }
oid = "0.2.1"
rand = "0.8.5"